Changes for v0.51

- Win98 doesn't repaint Layout Panel when device type changed
- Highlight a button on the Layout Panel by clicking on it.
- Can't open .km files using File:Open

Changes for v0.50

- Added Layout Panel, which shows which buttons are included in the key map
  for the selected device type.  This panel is driven by information in the
  RDF file.  The first is the Image= entry in the [General] section, which
  specifies the name of the file containing a picture of the remote.  It can be
  a GIF or JPG file.  Next is the [ButtonShapes] section, which contains a space
  separated list of button shape descriptors as follows:
  <button name>=<shape description> where
    <button name> is the name of a button defined in the [Buttons] section
    <shape desctiption> is one of:
      ellipse:<x>,<y>,<width>,<height>
      rect:<x>,<y>,<width>,<height>
      poly:<x>,<y>[,<x>,<y>]*
  Currently only the RDFs for the 15-1994, URC-6131, and URC-7800 have these
  these entries.

Changes for v0.49

- Device parms lost when changing remotes requires a different, but compatible
  (same name, same parm names) protocol variant.
- Bug 782601: "Move Down" not working same as "Move Up" on "Functions"

Changes for v0.48

- Changed name of default directory containing device upgrage files
  to "Upgrades"
- Changed default extension for new device upgrade files to ".rmdu"
- Changed file open filter to accept both .km and .rmdu as valid
  extensions for device upgrades
- Changed command line arguments to RemoteMaster to better support
  file associations
- Added setup code to facilitate creating file associations in Windows.
- Improve behavior in certain cases in which .km files, .rdf files and
  the .ini file are inconsistent with each other (such as using .km
  files saved by earlier versions).
- Bug 746423: Vertical scroll in notes box

Changes for v0.47

- Changed digitMaps data type from byte to int in order to simplify